# 6.8420-CompDesignFab

./: .gitignore  CMakeLists.txt
Common/: CMakeLists.txt
Common/FEM/: deformable_body.hpp  linear_material.hpp  material.hpp  neohookean_material.hpp  poly_mesh.hpp  tet_deformable_body.hpp  tetrahedral_mesh.hpp
Common/Geometry/: BasicGeometry.hpp  GeometryExploration.hpp
Common/Mesh/: marching_cube.hpp  mesh.hpp  read_stl.hpp  tri_mesh.hpp  voxelizer.hpp
assignment1/: CMakeLists.txt  FabSlicer.hpp  GCodeConverter.hpp  IntervalTree.hpp  main.cpp  voxelizer.hpp
assignment2/: CMakeLists.txt  hexahedral_mesh.hpp  main.cpp  poly_mesh.hpp  typedefs.hpp  voxelizer.hpp
assignment2/src/: bounded_biharmonic_weights.hpp  cotangent_laplacian.hpp  linear_weights.hpp  main.cpp  quadratic_optimizer.hpp
assignment3/: CMakeLists.txt  FabSlicer.hpp  IntervalTree.hpp  main.cpp
assignment3/src/: bounded_biharmonic_weights.hpp  cotangent_laplacian.hpp  handles.hpp  linear_blend_skinning_ui.hpp  linear_weights.hpp  main.cpp  mesh_util.hpp
assignment4/: CMakeLists.txt  main.cpp
assignment5/: CMakeLists.txt
assignment5/part1/: CMakeLists.txt  topopt.cpp
assignment5/part2/: main.cpp
data/assignment1/: cube.stl  fandisk_voxel_info.txt  grade.py  rect_hole.stl  run_assignment1.py  spot_voxel_info.txt  spot_with_hole.stl  triangle.stl
data/assignment1/results/: bunny_voxel_info.txt  compare_contour.py  compare_slice.py  fandisk_fast_voxel_info.txt  plyfile.py  rect_hole_contour.ply  rect_hole_slicing.gcode  spot_with_hole_voxel_info.txt
data/assignment2/: bunny_voxel_info.txt  fandisk.stl  grade.py  run_assignment2.py  spot.stl
data/assignment2/BBW/: cube_voxel_handles.txt  cube_voxel_info.txt  spot_handles.txt
data/assignment2/BBW/results/: bunny_bbw_weights_std.txt  frame_bbw_weights_std.txt  spot_bbw_weights_std.txt  tyra_bbw_weights_std.txt
data/assignment2/results/: fandisk_voxel.stl
data/assignment2/std/: bunny_voxel_info.txt  bunny_with_hole_voxel_info.txt  spot_with_hole_voxel_info.txt
data/assignment3/BBW/: bunny.stl  bunny_handles.txt  frame.stl  frame_handles.txt  tyra.stl  tyra_handles.txt
data/assignment3/BBW/results/: cube_voxel_bbw_weights_std.txt  frame_bbw_weights_std.txt  tyra_bbw_weights_std.txt
data/assignment3/CSG/: parametric1.stl  parametric2.stl  parametric3.stl  parametric4.stl  parametric5.stl  parametric6.stl
data/assignment3/results/: compare_contour.py  rect_hole_slicing.ply  triangle_slicing.ply
data/assignment4/: K_4x2x2_linear.txt  deformed_linear.stl  deformed_nonlinear.stl
data/assignment4/std/: K_4x2x2_linear.txt  deformed_20x8x8_linear.stl  deformed_20x8x8_nonlinear.stl  deformed_4x2x2_linear.stl  deformed_4x2x2_nonlinear.stl
data/assignment5/: bridge.stl
data/assignment5/CSG/: assn5_CSG.py
data/assignment5/std/: q1_result.txt
